fixing transaction import
